--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "katoto_qrcode",
-  "version": "1.1.2",
-  "description": "基于qrcode的npm包",
+  "name": "@katoto/qrcode",
+  "version": "1.1.3",
+  "description": "一个简易生成qrcode的npm包",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +12,9 @@
   },
   "keywords": [
     "qrcode",
-    "katoto-qrcode",
-    "components",
+    "@katoto/qrcode",
+    "基础组件",
+    "Framework",
     "plugin"
   ],
   "author": "katoto",
